overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,12 @@ body {
     display: none;
   }
 
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
+
   #page {
     position: relative;
     width: 100%;
